Completed Trains Problem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,18 @@
         <item>10</item>
     </string-array>
 
+   <string name="test_data">1. The distance of the route A-B-C.\n
+2. The distance of the route A-D.\n
+3. The distance of the route A-D-C.\n
+4. The distance of the route A-E-B-C-D.\n
+5. The distance of the route A-E-D.\n
+6. The number of trips starting at C and ending at C with a maximum of 3 stops. In the sample data
+below, there are two such trips: C-D-C (2 stops). and C-E-B-C (3 stops).\n
+7. The number of trips starting at A and ending at C with exactly 4 stops. In the sample data below,
+there are three such trips: A to C (via B,C,D); A to C (via D,C,D); and A to C (via D,E,B).\n
+8. The length of the shortest route (in terms of distance to travel) from A to C.\n
+9. The length of the shortest route (in terms of distance to travel) from B to B.\n
+10. The number of different routes from C to C with a distance of less than 30. In the sample data,
+the trips are: CDC, CEBC, CEBCDC, CDCEBC, CDEBC, CEBCEBC, CEBCEBCEBC.</string>
+
 </resources>
